# sphinx-rtd-size

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
docs/: conf.py  index.rst
docs/usage/: index.rst
sphinx_rtd_size/: __init__.py  extension.py
sphinx_rtd_size/_static/css/: sphinx_rtd_size.css_t
