[tool.poetry]
name = "sphinx-rtd-size"
version = "0.1.0"
description = "Sphinx extension for resizing your RTD theme."
authors = ["michael tadnir <tadnir50@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Sphinx = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
